Removed grid-gap and fixed grid-cols in line 9

--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@
 
 #container {
     display: grid;
-    gap: 1em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-columns), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
 
 .grid-item {
